--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,32 +1,8 @@
-<div class="clear-absolute"></div>
+<%= render partial: "shared/banner", locals: { title: "Contact" } %>
+
 <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Contact</h1>
-
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <%=link_to 'Home', root_path %>
-        </li>
-        <li class="breadcrumb-item active">Contact</li>
-    </ol>
-
-    <!-- Contact Detail Column -->
-    <div class="row">
-        <div class="col-lg-6">
-            <%= image_tag "georgesatalla.jpg", class: "img-fluid rounded mb-4", alt:"Georges ATALLA" %>
-        </div>
-        <div class="col-lg-6">
-          <h2>HIRE ME !</h2>
-          <h3>Georges ATALLA</h3>
-          <h4>Ruby on Rails developer</h4>
-          <p>Phone: +33.(0)6.80.81.93.40</p>
-          <p>Email:
-            <a href="mailto:georges_atalla@hotmail.fr">georges_atalla@hotmail.fr</a>
-          </p>
-          <p>Github: <%=link_to 'Ggs91', 'https://github.com/Ggs91/', target:"_blank" %> </p>
-        </div>
-    </div>
-    <!-- /.row -->
+  <%= render layout: "static_pages/presentation_panel" do %>
+    <h2>HIRE ME !</h2>
+    <p>I'm looking for a full time job with a team :)</p>
+  <% end %>
 </div>
-    <!-- /.container -->
