--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="form-wrapper">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin" )do |f| %>
-  <%= image_tag "icon/e.png", class: "mb-4", width: "72", height: "72" %>
+  <%= image_tag "icons/e.png", class: "mb-4", width: "72", height: "72" %>
     <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
     <%= f.label :username, class: "sr-only" %>
     <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: "Enter username", class:'form-control' %>
