--- a/app/assets/stylesheets/utilities/mixins/_underly.scss
+++ b/app/assets/stylesheets/utilities/mixins/_underly.scss
@@ -11,5 +11,8 @@
     bottom: 0;
     left: 50%;
     transform: translate3d(-50%, 0, 0);
+    @include breakpoint (phone-portrait) {
+      height:3px;
+    }
   }
 }
