--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -4,6 +4,10 @@
   width: 100%; 
   z-index: 100;
   height: 55px;
+  padding: 0;
+  @include breakpoint(phone-landscape) {
+    padding: 0 2em;
+  }
 }
 
 .bg-dark-transparent {
