--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import 'utilities/classes';
 @import 'base/font';
 @import 'base/config';
+@import 'base/typography';
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
@@ -14,3 +15,4 @@
 @import 'components/showcase_carousel';
 @import 'components/card';
 @import 'components/form';
+@import 'components/presentation_panel';
