--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -5,15 +5,16 @@ h1 {
 h2 {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.8em;
-  font-size: 2.5em;
+  font-size: 2.2em;
   color: var(--primary);
-  margin-bottom: .5em;
+  margin-bottom: 1.2em;
   @include underly(var(--primary));
   @include breakpoint(phone-portrait) {
-    font-size: 1.5em;
+    font-size: 1.7em;
     line-height: 1.5;
   }
 }
+
 
 h3 {
   @include breakpoint(phone-portrait) {
