remove justify-contant inline

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,6 +1,6 @@
 <% banner_img ||= false %>
 <section class="banner">
-  <div class="flex-container overlay d-flex justify-content-center align-items-center">
+  <div class="flex-container overlay d-flex align-items-end">
     <div class="content container">
       <h3><%= title %></h3>
     </div>
