--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,14 @@
 <%= render partial: "shared/banner", locals: { title: "Profile" } %>
 
 <div class="container">
-
-
-  <!-- Contact Detail Column -->
-  <div class="row">
-      <div class="col-lg-4">
-        <%= current_user_avatar %>
-      </div>
-      <div class="col-lg-8">
-        <h2>Your personal infos:</h2>
-        <ul>
-          <li><b>Username:</b> <%= @user.username %></li>
-          <li><b>First name:</b> <%= @user.first_name %></li>
-          <li><b>Last name:</b> <%= @user.last_name %></li>
-          <li><b>Description:</b> <%= @user.description %></li>
-          <li><b>Email:</b> <%= @user.email %></li>
-        </ul>
-        <h4>Edit your account:</h4>
-          <%= link_to 'Edit Personal infos', edit_user_path, class:'btn btn-primary'%>    
-          <%= link_to 'Edit Password & Email', edit_user_registration_path, class:'btn btn-danger'%>    
-      </div>
+  <div class="text-center">
+    <h2>Your personal infos:</h2>
   </div>
+  <%= render partial: "user_profile_card", locals: { user: @user } %>
 
-  <h2>Events you're administrating:</h2>
+  <div class="text-center">
+    <h2>Events you're administrating:</h2>
+  </div>
   <%= render partial: "events/event_card_list", locals: { events: @administrated_events, display_status: true } %>
  
   <div class="text-center">
