--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,11 @@
-<div class="container">
+<%= render partial: "shared/banner", locals: { title: "Edit Profile" } %>
 
-  <h3>Add or change your profile picture</h3>.
+<div class="container">
   <div class="form-group">
 
     <%= current_user_avatar %>
 
     <%= form_tag user_avatar_path(current_user.id), multipart: true do %>
-      <%= label_tag :avatar %><br>
       <%= file_field_tag :avatar %><br>
       <%= submit_tag "Upload", class:"btn btn-primary" %>
     <% end %>
@@ -14,7 +13,7 @@
     <%= link_to 'Delete avatar', user_avatar_path(current_user.id), method: :delete, class: "btn btn-danger" %>
   </div>
 
-  <h3>Edit your personnal infos:</h3>
+  <h2>Edit your personnal infos:</h2>
 
   <%= form_for @user, :html => { novalidate: true, class: "needs-validation" } do |f| %>
 
