--- a/app/views/participations/index.html.erb
+++ b/app/views/participations/index.html.erb
@@ -1,17 +1,17 @@
+<%= render partial: "shared/banner", locals: { title: "Dashboard" } %>
 
 <div class="container">
-  <h2>Participants registered for this event</h2>
+  <div class="text-center">
+    <h2>Participants registered for this event</h2>
+  </div>
+
   <div class="list-group">
       <% @participations.each do |participation| %>
-        <div class="list-group-item flex-column align-items-start">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1"><%= participation.user.username%></h5>
-            <h5 class="mb-1"><%= participation.user.email %></h5>
-            <small><%= time_ago_in_words(participation.created_at) %></small>
-          </div>
-        </div>
+         <%= render partial: "users/user_card_list", locals: { user: participation.user, participation: participation } %>
       <% end %>
   </div>
-  <%= link_to 'Edit this event', edit_event_path(@event), class:'btn btn-primary' %>
-  <%= link_to 'Delete this event', event_path(@event), method: :delete, class: 'btn btn-danger' %>
+  <div class="text-center">
+    <%= link_to 'Edit this event', edit_event_path(@event), class:'btn btn-primary' %>
+    <%= link_to 'Delete this event', event_path(@event), method: :delete, class: 'btn btn-danger' %>
+  </div>
 </div>
