--- a/app/views/events/_event_card_list.html.erb
+++ b/app/views/events/_event_card_list.html.erb
@@ -1,8 +1,11 @@
-<% display_status ||= false %>
 <div class="row">
   <% events.each do |event| %>
   <div class="col-item col-xl-3 col-lg-4 col-sm-6">
-    <%= render partial: "events/event_card", locals: {event: event, display_status: display_status } %>
+    <% if local_assigns[:display_status] %>
+      <%= render partial: "events/event_card", locals: {event: event, display_status: display_status } %>
+    <% else %>
+      <%= render partial: "events/event_card", locals: {event: event } %>
+    <% end %>
   </div>
   <% end %>
 </div>
