import style files

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,8 +11,15 @@
 @import 'components/banner';
 @import 'components/pagination';
 @import 'pages/home';
+@import 'pages/event/show';
 @import 'components/carousel';
 @import 'components/showcase_carousel';
 @import 'components/card';
 @import 'components/form';
 @import 'components/presentation_panel';
+@import 'components/user_profile_card';
+@import 'components/user_card_list';
+@import 'components/card_presentation_panel';
+@import 'components/event_link_panel';
+@import 'components/event_listing';
+@import 'components/comments';
