--- a/app/assets/stylesheets/components/_presentation_panel.scss
+++ b/app/assets/stylesheets/components/_presentation_panel.scss
@@ -1,12 +1,28 @@
 .presentation-panel {
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   border-radius: 3px;
   border: none;
   box-shadow: 0 16px 64px -16px rgba(46,55,77,.1);
+  h3 {
+    color: #000;
+    margin-bottom: 1em;
+    @include breakpoint(tablet-portrait){
+      font-size: 1.7em;
+    }
+    @include breakpoint(phone-portrait){
+      font-size: 1.5em;
+    }
+  }
+  @include breakpoint(phone-portrait){
+    margin-bottom: 30px;
+  }
 }
 
+.presentation-panel div:nth-child(2) {
+  padding: 1.5em;
+}
 
-@media (min-width: 991px) { 
+@media screen and (min-width: 991px) { 
   .presentation-panel img {
     margin: 0;
   }
