--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,12 @@
   height: 200px;
   position: relative;
   margin-bottom: 50px;
-
+  @include breakpoint(tablet-portrait){
+    height: 150px;
+  }
+  @include breakpoint(phone-portrait){
+    margin-bottom: 20px;
+  }
 }
 
 .banner .flex-container {
@@ -14,8 +19,11 @@
 
 .banner .content {
   text-align: center;
+  margin-bottom: 40px;
+  @include breakpoint(tablet-portrait){
+    margin-bottom: 25px;
+  }
 }
-
 
 .banner-img {
   position: absolute;
@@ -28,14 +36,8 @@
 }
 
 .banner h3 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
-}
-
-@media screen and (max-width: 992px) {
-  .banner h3 {
-    font-size: 2.5rem;
-  }
 }
 
 @media screen and (max-width: 576px) {
