--- a/app/assets/stylesheets/base/_config.scss
+++ b/app/assets/stylesheets/base/_config.scss
@@ -1,5 +1,4 @@
 // Custom Style
-
 html {
   position: relative;
   min-height: 100%;
@@ -15,17 +14,10 @@ h1 {
   font-family: 'Montserrat', sans-serif;
 }
 
-h2 {
-  font-family: 'Montserrat', sans-serif;
-  line-height: 1.5em;
-  font-size: 2.5em;
-  color: var(--primary);
-  @include underly(var(--primary));
-  @include breakpoint(phone-portrait) {
-    font-size: 1.8em;
-  }
-}
-
 ul {
   padding-left: 1em;
+}
+
+h3 {
+  font-weight: 700;
 }
