--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,6 +1,6 @@
 <% commentable.comments.each_with_index do |comment, i| %>  
   <div class="media mb-4">
-    <%= user_avatar(comment.commenter, "d-flex mr-2 rounded-circle", 50) %>
+    <%= render partial: "users/user_avatar", locals: { user: comment.commenter, image_class: "d-flex mr-2 rounded-circle", size: "50x50" } %>
     <div class="media-body">
       <h5 class="mt-0 commenter-username d-inline-block"> <%= comment.commenter.username %></h5>
       <span class="text-muted ml-2"><%= time_ago_in_words(comment.created_at) %></span>
@@ -19,7 +19,7 @@
 
       <% comment.comments.each do |nested_comment| %>
         <div class="media mt-4">
-          <%= user_avatar(comment.commenter, "d-flex mr-2 rounded-circle", 50) %>
+          <%= render partial: "users/user_avatar", locals: { user: comment.commenter, image_class: "d-flex mr-2 rounded-circle", size: "50x50" } %>
           <div class="media-body">
             <h5 class="mt-0 commenter-username d-inline-block"><%= nested_comment.commenter.username %></h5>
             <span class="text-muted ml-2"><%= time_ago_in_words(nested_comment.created_at) %></span>
