correct alt attribute value

--- a/app/views/static_pages/_showcase_carousel.html.erb
+++ b/app/views/static_pages/_showcase_carousel.html.erb
@@ -4,10 +4,10 @@
         <%= image_tag "sport.jpg", alt:"Sport Event", class:"carousel-img" %>
       </div>
       <div class="carousel-item">
-        <%= image_tag "conference.jpg", alt:"Sport Event", class:"carousel-img" %>
+        <%= image_tag "conference.jpg", alt:"Conference Event", class:"carousel-img" %>
       </div>
       <div class="carousel-item">
-        <%= image_tag "cooking.jpeg", alt:"Sport Event", class:"carousel-img" %>
+        <%= image_tag "cooking.jpeg", alt:"Cooking Event", class:"carousel-img" %>
       </div>
     </div>
   </div>
