--- a/app/views/users/_user_profile_card.html.erb
+++ b/app/views/users/_user_profile_card.html.erb
@@ -1,6 +1,6 @@
 <div class="row user-profile-card">
   <div class="col-lg-4 col-md-6">
-    <%= current_user_avatar %>
+    <%= render partial: "users/user_avatar", locals: { user: current_user, size: "200x200" } %>
   </div>
   <div class="col-lg-8 col-md-6">
     <ul>
