--- a/app/assets/stylesheets/components/_event_listing.scss
+++ b/app/assets/stylesheets/components/_event_listing.scss
@@ -14,9 +14,13 @@
     @media screen and (max-width: 768px) {
       padding: 25px 50px;
     }
-    
+
     @media screen and (max-width: 576px) {
       padding: 15px 20px;
     }
   }
+}
+
+.event-listing-wrapper {
+  // max-width: 1200px;
 }
