remove defaut class

--- a/app/views/events/_event_card.html.erb
+++ b/app/views/events/_event_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card card-presentation card-regular">
+<div class="card card-presentation">
   <%= link_to event_path(event.id), class: "card-img-link" do %>
     <% display_event_images(event, "card-img").first %>
   <% end %>
