--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -15,7 +15,7 @@
 
       <%# Navbar  %>
 
-      <div class="collapse navbar-collapse">
+      <div id="navbarColor02" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
