--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,20 +2,21 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark-transparent" id="main-nav">
     <div class="container">
 
-      <%# Brand butoon %>
+      <!-- Brand button -->
+
       <a href="/" class="navbar-brand">
         Event<span class="highlight">Bright</span>
       </a>
 
-      <%# Navbar Toggler %>
+      <!-- Navbar toggler button-->
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <%# Navbar  %>
+      <!-- Navbar -->
 
-      <div id="navbarColor02" class="collapse navbar-collapse">
+      <div id="navbarColor02" class="collapse navbar-collapse" style="margin:0;padding:0">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
@@ -56,7 +57,7 @@
         </ul>
       </div>
     </div>
-    <%# Container %>
+    <!-- Container -->
   </nav>
-  <%# navigation %>
+  <!-- Navigation -->
 </header>
