--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark-transparent" id="main-nav">
+  <nav class="navbar navbar-expand-lg navbar-dark" id="main-nav">
     <div class="container">
 
       <!-- Brand button -->
@@ -10,13 +10,13 @@
 
       <!-- Navbar toggler button-->
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation" style="border:none">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <!-- Navbar -->
 
-      <div id="navbarColor02" class="collapse navbar-collapse" style="margin:0;padding:0">
+      <div id="nav-content" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
