--- a/app/views/participations/new.html.erb
+++ b/app/views/participations/new.html.erb
@@ -22,11 +22,12 @@
               class="stripe-button"
               data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
               data-description="<%= @description %>"
+              data-image="<%= url_for(@event.images.first)%>"
               <%# strip "talks" in cents %>
               data-amount="<%= @amount %>"
               data-label="Register Now"
               data-currency="eur"
-              data-email="<%= current_user.email %>"p
+              data-email="<%= current_user.email %>"
               data-locale="auto">
       </script>
     <% end %>
