--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>EventBright</title>
+    <meta property="og:image" content='<%= image_url "eventbrite.png" %>'/>
+    <meta name="author" content="Georges Atalla">
+    <meta name="description" property="og:description" content="Clone of eventbrite.fr built with Ruby on Rails !">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag 'icons/EventBright.ico' %>
