change open graph image link using cloudinary

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>EventBright</title>
-    <meta property="og:image" content='<%= image_url "eventbrite.png" %>'/>
+    <meta property="og:image" content='https://res.cloudinary.com/cloudfilestorage/image/upload/v1618177926/eventbrite/eventbright_srs7mc.png'/>
     <meta name="author" content="Georges Atalla">
     <meta name="description" property="og:description" content="Clone of eventbrite.fr built with Ruby on Rails !">
     <%= csrf_meta_tags %>
