--- a/app/views/static_pages/_showcase.html.erb
+++ b/app/views/static_pages/_showcase.html.erb
@@ -3,7 +3,7 @@
   <div class="overlay flex-container d-flex justify-content-center align-items-center">
     <div class="content container">
       <h1>Welcome to EventBright</h1>
-      <p>Organise events, gather people, make a change</p>
+      <p>Organise events. Gather people. Make a change</p>
       <%= link_to 'Create an event', new_event_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
